tests/ui/associated-types/always-applicable-impls-shadowed-in-trait-def.next.stderr
error[E0277]: the trait bound `Self: Eq<<Self as Trait>::Assoc>` is not satisfied
  --> $DIR/always-applicable-impls-shadowed-in-trait-def.rs:13:17
   |
LL |     fn foo() -> IsEqual<Self, Self::Assoc> {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Eq<<Self as Trait>::Assoc>` is not implemented for `Self`
   |
note: required by a bound in `IsEqual`
  --> $DIR/always-applicable-impls-shadowed-in-trait-def.rs:9:19
   |
LL | struct IsEqual<T: Eq<U>, U>(T, U);
   |                   ^^^^^ required by this bound in `IsEqual`
help: consider further restricting `Self`
   |
LL |     fn foo() -> IsEqual<Self, Self::Assoc> where Self: Eq<<Self as Trait>::Assoc> {
   |                                            ++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
